# tg-service-v2

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
ci/docker/: .env.example  docker-compose.yml
deploy/: .env.production.example  Makefile  docker-compose.production.yml
docs/: AUDIT_2026_04_08.md  TODO_PLAN.md
migrations/: env.py
migrations/versions/: 001_initial_tables.py  002_encrypt_api_hash_proxy_password.py
scripts/: add_bot.py  import_accounts.py  import_xpay_accounts.py
src/: config.py  main.py
src/cli/: proxies.py  sessions.py
src/core/: error_codes.py  exceptions.py  healthcheck.py  logging.py  metrics.py  security.py
src/infrastructure/: database.py  rate_limiter.py  redis.py
src/modules/accounts/: models.py  repository.py  service.py
src/modules/billing/: idempotency.py
src/modules/posting/: bot_pool.py  handlers.py  retry.py  service.py
src/modules/scraping/: handlers.py  proxy_manager.py  service.py  session_pool.py  telethon_client.py
src/transport/: consumer.py  producer.py  router.py  schemas.py
tests/: conftest.py  test_bot_pool.py  test_consumer.py  test_idempotency.py  test_posting_handlers.py  test_posting_service.py  test_producer.py  test_retry.py  test_router.py  test_schemas.py  test_scraping_handlers.py  test_scraping_retry.py  test_scraping_stats.py  test_security.py  test_session_pool.py
